backend/src/main/java/com/example/grannfix/common/errors/BadRequestException.java
package com.example.grannfix.common.errors;

public class BadRequestException extends RuntimeException {
    public BadRequestException(String message) { super(message); }
}